--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,9 @@
 [submodule "home/.vim/not-bundle/vim-autocorrect"]
 	path = home/.vim/not-bundle/vim-autocorrect
 	url = git://github.com/panozzaj/vim-autocorrect.git
+[submodule "home/.vim/bundle/gundo.vim"]
+	path = home/.vim/bundle/gundo.vim
+	url = git://github.com/sjl/gundo.vim.git
+[submodule "home/.vim/bundle/nerdtree"]
+	path = home/.vim/bundle/nerdtree
+	url = git://github.com/scrooloose/nerdtree.git
