--- a/.gitmodules
+++ b/.gitmodules
@@ -19,9 +19,6 @@
 [submodule "home/.vim/bundle/vim-markdown"]
 	path = home/.vim/bundle/vim-markdown
 	url = git://github.com/tpope/vim-markdown.git
-[submodule "home/.vim/bundle/vim-powerline"]
-	path = home/.vim/bundle/vim-powerline
-	url = git://github.com/Lokaltog/vim-powerline.git
 [submodule "home/.vim/bundle/vim-rails"]
 	path = home/.vim/bundle/vim-rails
 	url = git://github.com/tpope/vim-rails.git
@@ -49,6 +46,15 @@
 [submodule "home/.vim/bundle/screen"]
 	path = home/.vim/bundle/screen
 	url = git://github.com/ervandew/screen.git
+[submodule "home/.vim/bundle/funcoo"]
+	path = home/.vim/bundle/funcoo
+	url = git@github.com:rizzatti/funcoo.vim.git
+[submodule "home/.vim/bundle/dash"]
+	path = home/.vim/bundle/dash
+	url = git@github.com:rizzatti/dash.vim.git
 [submodule "home/.vim/bundle/ctrlp.vim"]
 	path = home/.vim/bundle/ctrlp.vim
 	url = https://github.com/kien/ctrlp.vim.git
+[submodule "home/.powerline"]
+	path = home/.powerline
+	url = https://github.com/Lokaltog/powerline.git
